--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="left"></div>
+    <div class="right"></div>
 </body>
 </html>
