--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="left"></div>
-    <div class="right"></div>
+    <div class="right">
+        <div class="thursday"></div>
+        <div class="friday"></div>
+        <div class="sunday"></div>
+    </div>
 </body>
 </html>
