--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-    <div class="left"></div>
+    <div class="left">
+        <div class="monday"></div>
+        <div class="tuesday"></div>
+        <div class="wednesday"></div>
+    </div>
     <div class="right"></div>
 </body>
 </html>
