--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
         <div class="wednesday"></div>
     </div>
     <div class="right">
-        <div class="thursday"></div>
-        <div class="friday"></div>
-        <div class="sunday"></div>
+        <div class="day">
+            <h1>Thursday:</h1>
+            <div class="thursday">
+
+            </div>
+        </div>
+        <div class="day">
+            <h1>Friday:</h1>
+            <div class="friday"></div>
+        </div>
+        <div class="day">
+            <h1>Sunday:</h1>
+            <div class="sunday"></div>
+        </div>
     </div>
 </body>
 </html>
