--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <div class="right">
         <div class="day">
             <h1>Thursday:</h1>
-            <div class="thursday">
-
-            </div>
+            <div class="thursday"></div>
         </div>
         <div class="day">
             <h1>Friday:</h1>
