--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="left">
         <div class="day">
             <h1>Monday:</h1>
-            <div class="monday"></div>
+            <div class="monday">
+            </div>
         </div>
         <div class="day">
             <h1>Tuesday:</h1>
